--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,5 @@ before_install:
 
 script:
   - cactus build
-  - cd .build 
-  - CHECK=$(for file in *.html; do python ../html5check.py -geh $file; done;)
+  - CHECK=$(for file in .build/*.html; do python html5check.py -geh $file; done;)
   - if [[ ! -z $(echo "$CHECK" | grep -vE 'iframe') ]]; then echo "$CHECK"; exit 1; fi;
