Update cactus link and installation for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 sudo: false
 
 install:
-  - pip install https://github.com/koenbok/Cactus/archive/master.zip
+  - pip install cactus
   - wget https://raw.githubusercontent.com/mozilla/html5-lint/master/html5check.py
 
 script:
