Use local html5 validator on Travis. Add postcss-cssnext to process CSS. Add stylelint tests. Add editorconfig. Add lang to html tag. Add green.png.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
 language: python
 python:
-  - "2.7"
+  - "3.5"
 
 sudo: false
 
+addons:
+  apt:
+    packages:
+      - oracle-java8-set-default
+
 install:
   - pip install cactus
-  - wget https://raw.githubusercontent.com/mozilla/html5-lint/master/html5check.py
+  - pip install html5validator
+  - nvm install 6.10.3
+  - nvm use 6.10.3
+  - npm install -g yarn
+  - yarn install
 
 script:
   - cactus build
-  - CHECK=$(for file in .build/*.html; do python html5check.py -geh $file; done;)
-  - if [[ ! -z $(echo "$CHECK" | grep -vE 'iframe') ]]; then echo "$CHECK"; exit 1; fi;
+  - html5validator --root .build --show-warnings
