Fix Travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 python:
   - "3.5"
 
+# Work around for boto bug:
+# https://github.com/boto/boto/issues/3717#issuecomment-430894557
+env:
+  - BOTO_CONFIG=/dev/null
+
 sudo: false
 
 addons:
