--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: false
 addons:
   apt:
     packages:
-      - oracle-java8-set-default
+      - openjdk-8-jre
 
 install:
   - pip install -r requirements.txt
