Add deploy action and limit actions to source branch

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -1,6 +1,9 @@
 name: Build site and check output
 
-on: [push]
+on:
+  push:
+    branches:
+      - source
 
 jobs:
   build:
@@ -9,22 +12,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: '3.7'
+
     - name: Install openjdk
       run: |
         sudo apt-get install openjdk-8-jre
+
     - name: Install Python dependencies
       run: |
         pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
+
     - name: Build site
       run: |
         cactus build
+
     - name: Check html
       run: |
         html5validator --root .build --show-warnings --also-check-css
 
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3.6.1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: .build
+        publish_branch: master
+        cname: shs-geronimo.org
+        force_orphan: true
