--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -42,5 +42,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: .build
         publish_branch: master
-        cname: shs-geronimo.org
+        cname: www.shs-geronimo.org
         force_orphan: true
