Fix HTML check step in deploy action

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -18,24 +18,21 @@ jobs:
       with:
         python-version: '3.7'
 
-    - name: Install openjdk
-      run: |
-        sudo apt-get update
-        sudo apt-get install openjdk-8-jre
-
     - name: Install Python dependencies
       run: |
         pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r requirements-dev.txt
 
     - name: Build site
       run: |
         cactus build
 
     - name: Check html
-      run: |
-        html5validator --root .build --show-warnings --also-check-css
+      uses: Cyb3r-Jak3/html5validator-action@v0.4.2
+      with:
+        root: .build/
+        css: true
+        log_level: INFO
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3.6.1
